results/SpecGenBench/4-shot/log-NegAbs-2023_11_28_00_16_43.txt
public class NegAbs {
	
	//@ ensures \result == num < 0 ? num : -num;
	public int negAbs(int num) {
		if (num < 0)
			return num;
		else
			return -num;
	}

}
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: error: incomparable types: int and boolean
	//@ ensures \result == num < 0 ? num : -num;
	                    ^
/home/max/Documents/JMLGPT/tmp/NegAbs.java:3: error: incompatible types: int cannot be converted to boolean
	//@ ensures \result == num < 0 ? num : -num;
	                               ^
2 errors

